# ph-civ

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE-PENDING.md  README.md  START-HERE.md  llms-full.txt  llms.txt  pyproject.toml
artifacts/: gt-29-asr-verify.md
book/: README.md  seven-volume-to-two-volume.md  table-of-contents.md
commentaries/: README.md  essay-2025-08-06-vision-mission-goals-commentary.md  essay-2025-08-08-continuity-of-government-is-a-joke-commentary.md  essay-2025-08-13-the-third-coming-commentary.md  essay-2025-08-20-the-secret-history-of-the-world-1-commentary.md  essay-2025-08-22-the-secret-history-of-the-world-2-commentary.md  essay-2025-08-26-the-secret-history-of-the-world-3-commentary.md  essay-2025-08-29-the-secret-history-of-the-world-4-commentary.md  essay-2025-09-05-the-secret-history-of-the-world-5-commentary.md  essay-2025-09-09-the-secret-history-of-the-world-6-commentary.md  essay-2025-09-12-secret-history-7-the-voyage-home-commentary.md  essay-2025-09-13-tipping-point-usa-commentary.md  essay-2025-09-17-i-have-questions-about-tyler-robinson-commentary.md  essay-2025-09-20-predictive-history-reading-list-commentary.md  essay-2025-09-22-what-can-be-done-commentary.md  essay-2025-09-27-the-empire-goes-to-war-commentary.md  essay-2025-10-01-war-machine-usa-commentary.md  essay-2025-10-03-why-i-refuse-to-get-rich-commentary.md  essay-2025-10-10-secret-history-8-the-rise-of-the-american-kakistocracy-commentary.md  essay-2025-10-12-the-limits-of-pax-judaica-commentary.md  essay-2025-10-15-secret-history-10-the-war-of-heaven-commentary.md  essay-2025-10-17-secret-history-10-the-great-revealing-commentary.md  essay-2026-01-03-blowback-venezuela-commentary.md  essay-2026-01-10-minnesota-burning-commentary.md  essay-2026-01-17-iran-greenland-and-canada-commentary.md  essay-2026-01-24-carneys-speech-and-trumps-letter-commentary.md  essay-2026-02-07-twilight-of-the-liberal-elite-commentary.md  essay-2026-02-14-welcome-to-the-rupture-commentary.md  essay-2026-02-21-countdown-to-iran-commentary.md  essay-2026-02-28-world-war-iii-begins-commentary.md  essay-2026-03-07-the-acceleration-commentary.md  essay-2026-03-14-vietnam-redux-commentary.md  (+12 more)
data/: bilingual-loop.json  (+10 more)
(+2466 files in other folders)
